# hotbob

./: .gitignore  AGENTS.md  LICENSE  README.md  colab_hotbob.ipynb  controller_authority_colab.ipynb  pyproject.toml
data/: eval.jsonl  traces.jsonl  train.jsonl
docs/: delta_hotbob.md
src/hotbob/: cli.py  config.py  experiment.py  types.py
src/hotbob/baselines/: __init__.py  context_only.py  symbolic_memory.py
src/hotbob/data/: __init__.py  generate.py  hygiene.py  tasks_active_expiry.py  tasks_authority_conflict.py  tasks_binding.py  tasks_colour.py  tasks_expiry.py  tasks_interrupted_task.py  tasks_multi_step_tool_routing.py  tasks_privacy_disclosure_conflict.py  tasks_rich_standing_order.py  tasks_scope.py  tasks_stale_state_replacement.py  tasks_standing_order.py  tasks_tool_verified_override.py  traces.py
src/hotbob/llm/: __init__.py  architecture_compare.py  authority_report.py  compare.py  dataset.py  env.py  evaluate.py  generate.py  generate_data.py  memory_adapter.py  prompts.py  qwen_memory_model.py  train.py
src/hotbob/model/: __init__.py  action_readout.py  memory_bank.py  memory_read.py  memory_write.py  stateful_transformer.py  transformer.py
src/hotbob/training/: __init__.py  authority_report.py  (+7 more)
tests/: test_action_readout.py  test_authority_report.py  test_controller_authority_report.py  test_evaluate.py  test_expiry.py  test_llm_integration.py  test_losses.py  test_memory_bank.py  test_prompt_hygiene.py  test_scope_isolation.py  test_secret_colour.py  test_smoke_train.py  test_stateful_transformer_metadata.py  test_trace_generation.py
