[project]
name = "hotbob"
version = "0.1.0"
description = "Scoped typed working-memory transformer research prototype"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "accelerate>=1.12.0",
    "einops>=0.8.2",
    "numpy>=2.4.4",
    "peft>=0.13.0",
    "pydantic>=2.13.4",
    "rich>=15.0.0",
    "safetensors>=0.7.0",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "transformers>=4.47.0",
]

[project.scripts]
hotbob = "hotbob.cli:main"

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
packages = ["hotbob"]

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]
